# soft_ball

./: .gitignore  CMakeLists.txt  README.md  main.cpp
misc/: colors.cpp  colors.h
movie_creator/: movie_creator.cpp  movie_creator.h
shading/: frag.glsl  shading.cpp  shading.h
soft_ball/: soft_ball.cpp  soft_ball.h
sphere_subdivision/: CMakeLists.txt  edge.cpp  edge.h  face.cpp  face.h  main.cpp  point.cpp  point.h  subdivisor.cpp  subdivisor.h
visualizer/: visualizer.cpp  visualizer.h
